simple css loader

--- a/indexFile.html
+++ b/indexFile.html
@@ -11,6 +11,8 @@
 <body>
     <h1>CSS Animations</h1>
     <div class="animateHere"></div>
+    <h1>CSS Loader</h1>
+    <div class="loader"></div>
 </body>
 
 </html>
